--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "${workspaceRoot}/target/debug/server",
+            "program": "${workspaceRoot}/target/debug/main",
             "args": [],
             "cwd": "${workspaceRoot}",
             "preLaunchTask": "cargo_build"
